objects/Employee_Reporting__c/Employee_Reporting__c.object-meta.xml
<CustomObject>
    <description>This object stores the all the locations of an organization.</description>
    <label>Employee Reporting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee Reporting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees Reporting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>