objects/Employee_Reporting__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <referenceTo>Maanager_1__c</referenceTo>
    <relationshipLabel>Employees Reporting</relationshipLabel>
    <relationshipName>Employees_Reporting</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>