objects/Employee_Reporting__c/fields/NickName__c.field-meta.xml
<CustomField>
    <fullName>NickName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NickName</label>
    <length>180</length>
    <type>Text</type>
</CustomField>