objects/Employee_Reporting__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization</label>
    <length>180</length>
    <type>Text</type>
</CustomField>